# mymory

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: default_manifest.yaml
docs/: ARCHITECTURE.md  HYGIENE.md  PLUGIN.md  TAXONOMY.md
mymory/: __init__.py  cli.py  mcp.py
mymory/core/: __init__.py  converter.py  filter.py  ingest.py  ledger.py  manifest.py  note.py  sanitise.py  vault.py
mymory/layer2/: __init__.py  backlinks.py
mymory/layer3/: __init__.py  embed.py  grep_fallback.py
mymory/parsers/: __init__.py  base.py  chatgpt_export.py  claude_code_jsonl.py  cowork_jsonl.py  grok_export.py  mmr.py
plugin/.claude-plugin/: plugin.json
